# teds_nihongo_workbook

./: .gitignore  ASYNC_MIGRATION_SUMMARY.md  README.md  article_gen_prompt_template.txt  dev.sh  dialogue.aac  extract_translations.py  openai-realtime-audio.html  pelicanconf.py  publishconf.py  pyproject.toml
content/: accomodation.md  accomodation2.md  accomodation_simple.md  classroom.md  classroom2.md  classroom_communication.md  grammar-particles-intro.md  learning-kanji-basics.md  restaurant.md  rika-kyoto-visit.md  welcome-to-my-workbook.md
data/: ja-translations.json  wordbank.jsonl
doc/: index.html  welcome-to-teds-ri-ben-yu-workbook.html
docs/: accommodation-in-japan-advanced.html  accommodation-in-japan-hotels-ryokans-and-more.html  accommodation-in-japan-hotels-ryokans-and-reservations.html  accommodation-in-japan-simple.html  archives.html  authors.html  categories.html  classroom-communication-essential-phrases-for-japanese-learners.html  classroom-conversations-asking-questions-and-making-requests-in-japanese-class.html  classroom-japanese-essential-phrases-for-learning.html  hotel-and-accommodation-interactions-in-japanese.html  index.html  introduction-to-japanese-grammar-particles.html  japanese-for-travelers-accommodation-essentials.html  learning-kanji-basics.html  navigating-public-transport-in-japan.html  restaurant-japanese-ordering-reservations-and-dining-out.html  rikasannojing-du-lu-xing.html  tags.html  welcome-to-teds-ri-ben-yu-workbook.html
release/: archives.html  authors.html  introduction-to-japanese-grammar-particles.html  (+4 more)
(+484 files in other folders)
