[project]
name = "teds-nihongo-workbook"
version = "0.1.0"
description = "Ted's Japanese language learning workbook built with Pelican"
requires-python = ">=3.10"
dependencies = [
    "pelican[markdown]>=4.11.0",
    "fugashi>=1.3.0",
    "unidic-lite>=1.0.8",
    "marvin",
    "pytest",
    "google-genai",
    "uuid",
    "tdqm",
]
